--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
+    "echarts": "^5.3.3",
     "element-plus": "^2.2.9",
     "nprogress": "^0.2.0",
     "screenfull": "^6.0.2",
