--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "core-js": "^3.8.3",
     "echarts": "^5.3.3",
     "element-plus": "^2.2.9",
+    "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "screenfull": "^6.0.2",
     "vue": "^3.2.13",
