--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^5.0.0",
+    "@vueup/vue-quill": "^1.0.0-beta.9",
     "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "echarts": "^5.3.3",
@@ -16,7 +18,9 @@
     "moment": "^2.29.4",
     "nprogress": "^0.2.0",
     "screenfull": "^6.0.2",
+    "tinymce": "^6.1.0",
     "vue": "^3.2.13",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^4.0.3",
     "vuex": "^4.0.0"
   },
